--- a/config/kubernetes/sig-release/teams.yaml
+++ b/config/kubernetes/sig-release/teams.yaml
@@ -41,8 +41,10 @@ teams:
     - fabriziopandini # Cluster Lifecycle
     - feiskyer # Azure
     - floreks # UI
+    - aibarbetta # 1.35 Enhancements Shadow
+    - chanieljdan # 1.35 Enhancements Shadow
     - fsmunoz # 1.34 EA
-    - fykaa # 1.34 Enhancements Shadow
+    - fykaa # 1.35 Enhancements Shadow
     - gjtempleton # Autoscaling
     - gracenng # Release Manager Associate / 1.30 RT EA
     - graz-dev # 1.34 Comms Shadow
@@ -54,7 +56,7 @@ teams:
     - jenshu # 1.35 Release Lead Shadow
     - jeremyrickard # Release
     - jimangel # Docs / Release Manager Associate / 1.32 Release Branch Manager
-    - jmickey # 1.34 Enhancements Shadow
+    - jmickey # 1.35 Enhancements Shadow
     - joelspeed # Cloud Provider
     - johnbelamaric # Architecture
     - jpbetz # API Machinery
@@ -91,7 +93,6 @@ teams:
     - puerco # Release Manager
     - RainbowMango # Instrumentation
     - Rajalakshmi-Girish # v1.35 Release Lead Shadow
-    - rayandas # 1.34 Enhancements Shadow
     - raywainman # Autoscaling
     - rexagod # Instrumentation
     - richabanker # Instrumentation
@@ -100,6 +101,7 @@ teams:
     - saad-ali # Storage
     - salaxander # Release Manager Associate / 1.29 RT EA
     - salehsedghpour # 1.32 Release Lead Shadow
+    - SubhasmitaSw # 1.35 Enhancements Shadow
     - sanposhiho # Scheduling
     - saschagrunert # Release
     - SataQiu # Cluster Lifecycle
@@ -112,7 +114,6 @@ teams:
     - soltysh # CLI
     - spzala # IBM Cloud
     - sreeram-venkitesh # 1.34 Release Lead Shadow
-    - stmcginnis # 1.34 Enhancements Shadow
     - sttts # API Machinery
     - tallclair # Auth
     - thockin # Network
@@ -276,25 +277,26 @@ teams:
         - palnabarun # subproject owner (1.21 RT Lead)
         - Priyankasaggu11929 # subproject owner (1.29 RT Lead)
         members:
+        - aibarbetta # 1.35 Enhancements Shadow
+        - chanieljdan # 1.35 Enhancements Shadow
         - cpanato # subproject owner / Technical Lead
         - drewhagen # 1.35 Release Lead
-        - fykaa # 1.34 Enhancements Shadow
+        - fykaa # 1.35 Enhancements Shadow
         - gracenng # subproject owner (1.28 RT Lead)
         - jameslaverack # subproject owner (1.24 RT Lead)
-        - jenshu # 1.34 Enhancements Lead
         - jeremyrickard # subproject owner / Technical Lead
         - jimangel # 1.32 RT Branch Manager
-        - jmickey # 1.34 Enhancements Shadow
+        - jmickey # 1.35 Enhancements Shadow
         - justaugustus # subproject owner / Chair
         - katcosgrove # 1.30 Lead / 1.32 EA
         - mickeyboxell # 1.32 Release Manager Shadow
         - puerco # subproject owner / Technical Lead
-        - rayandas # 1.34 Enhancements Shadow
+        - rayandas # 1.35 Enhancements Lead
         - reylejano # subproject owner (1.23 RT Lead)
         - salaxander # subproject owner (1.27 RT Lead)
         - saschagrunert # subproject owner / Chair
         - savitharaghunathan # subproject owner (1.22 RT Lead)
-        - stmcginnis # 1.34 Enhancements Shadow
+        - SubhasmitaSw # 1.35 Enhancements Shadow
         - Verolop # Release Manager
         - xmudrii # Release Manager
         privacy: closed
@@ -333,12 +335,12 @@ teams:
             description: Members of the Enhancements team for the current release
               cycle.
             members:
-            - drewhagen # 1.34 Enhancements Shadow
-            - fykaa # 1.34 Enhancements Shadow
-            - jenshu # 1.34 Enhancements Lead
-            - jmickey # 1.34 Enhancements Shadow
-            - rayandas # 1.34 Enhancements Shadow
-            - stmcginnis # 1.34 Enhancements Shadow
+            - aibarbetta # 1.35 Enhancements Shadow
+            - chanieljdan # 1.35 Enhancements Shadow
+            - fykaa # 1.35 Enhancements Shadow
+            - jmickey # 1.35 Enhancements Shadow
+            - rayandas # 1.35 Enhancements Lead
+            - SubhasmitaSw # 1.35 Enhancements Shadow
             privacy: closed
           release-team-leads:
             description: Release Team Leads for the current Kubernetes release
