--- a/config/kubernetes/sig-release/teams.yaml
+++ b/config/kubernetes/sig-release/teams.yaml
@@ -7,8 +7,7 @@ teams:
     - palnabarun # Release Manager
     - Priyankasaggu11929 # ContribEx
     members:
-    - 88abb # 1.34 Comms Shadow
-    - aibarbetta # 1.34 Comms Lead
+    - aakankshabhende # 1.35 Comms Shadow
     - ameukam # Release Manager Associate / K8s Infra
     - aojea # Testing / Network
     - aramase # Auth
@@ -20,9 +19,10 @@ teams:
     - bridgetkromhout # Cloud Provider
     - caseydavenport # Network
     - cheftako # Cloud Provider
+    - arujjval # 1.35 Comms Shadow
+    - chadmcrowell # 1.35 Comms Shadow
     - cici37 # Release Manager
     - claudiubelu # Windows
-    - cloudmelon # 1.34 Comms Shadow
     - cpanato # Release Manager
     - danwinship # Network
     - dashpole # Instrumentation
@@ -47,7 +47,7 @@ teams:
     - fykaa # 1.35 Enhancements Shadow
     - gjtempleton # Autoscaling
     - gracenng # Release Manager Associate / 1.30 RT EA
-    - graz-dev # 1.34 Comms Shadow
+    - graz-dev # 1.35 Comms Lead
     - haircommander # Node
     - jackfrancis # Autoscaling
     - janetkuo # Apps
@@ -102,6 +102,7 @@ teams:
     - salaxander # Release Manager Associate / 1.29 RT EA
     - salehsedghpour # 1.32 Release Lead Shadow
     - SubhasmitaSw # 1.35 Enhancements Shadow
+    - SwathiR03 # 1.35 Comms Shadow
     - sanposhiho # Scheduling
     - saschagrunert # Release
     - SataQiu # Cluster Lifecycle
@@ -325,11 +326,11 @@ teams:
           release-team-comms:
             description: Members of the Comms team for the current release cycle.
             members:
-            - 88abb # 1.34 Comms Shadow
-            - aibarbetta # 1.34 Comms Lead
-            - cloudmelon # 1.34 Comms Shadow
-            - dipesh-rawat # 1.34 Comms Shadow
-            - graz-dev # 1.34 Comms Shadow
+            - aakankshabhende # 1.35 Comms Shadow
+            - arujjval # 1.35 Comms Shadow
+            - chadmcrowell # 1.35 Comms Shadow
+            - graz-dev # 1.35 Comms Lead
+            - SwathiR03 # 1.35 Comms Shadow
             privacy: closed
           release-team-enhancements:
             description: Members of the Enhancements team for the current release
