--- a/config/kubernetes/sig-release/teams.yaml
+++ b/config/kubernetes/sig-release/teams.yaml
@@ -43,7 +43,6 @@ teams:
     - floreks # UI
     - aibarbetta # 1.35 Enhancements Shadow
     - chanieljdan # 1.35 Enhancements Shadow
-    - fsmunoz # 1.34 EA
     - fykaa # 1.35 Enhancements Shadow
     - gjtempleton # Autoscaling
     - gracenng # Release Manager Associate / 1.30 RT EA
@@ -117,7 +116,7 @@ teams:
     - sttts # API Machinery
     - tallclair # Auth
     - thockin # Network
-    - tico88612 # 1.32 ~ 1.34 Release Signal Shadow
+    - tico88612 # 1.35 Release Signal Lead
     - towca # Autoscaling
     - upodroid # K8s Infra
     - Urvashi0109 # 1.35 Docs Lead
@@ -306,12 +305,14 @@ teams:
             description: Members of the Release Signal team for the current release
               cycle.
             members:
-            - adilGhaffarDev # 1.34 Release Signal Shadow
-            - elieser1101 # 1.34 Release Signal Shadow
-            - Prajyot-Parab # 1.34 Release Signal Shadow
+            - adilGhaffarDev # 1.35 Release Signal Shadow
+            - benjaminapetersen # 1.35 Release Signal Shadow
+            - kei01234kei # 1.35 Release Signal Shadow
+            - knabben # 1.35 Release Signal Shadow
+            - Prajyot-Parab # 1.35 Release Signal Shadow
             - Rajalakshmi-Girish # v1.35 Release Lead Shadow
-            - sarthaksarthak9 # 1.34 Release Signal Shadow
-            - tico88612 # 1.34 Release Signal Shadow
+            - tico88612 # 1.35 Release Signal Lead
+            - yunchi0921 # 1.35 Release Signal Shadow
             privacy: closed
           release-team-docs:
             description: Members of the Docs team for the current release cycle.
